<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9E9E9E">
    <!--#757575-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Name input-->

        <EditText
            android:id="@+id/name_input"
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint" />

        <!--Question 1-->

        <LinearLayout
            style="@style/questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_1" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/question1">

                <RadioButton
                    android:id="@+id/q1a1"
                    style="@style/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1a1wrong" />

                <RadioButton
                    android:id="@+id/q1a2"
                    style="@style/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1a2wrong" />

                <RadioButton
                    android:id="@+id/q1a3"
                    style="@style/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1a3right" />

                <RadioButton
                    android:id="@+id/q1a4"
                    style="@style/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1a4wrong" />
            </RadioGroup>

        </LinearLayout>

        <!--Question 2-->

        <LinearLayout
            style="@style/questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_2" />

            <CheckBox
                android:id="@+id/q2a1"
                style="@style/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2a1wrong" />

            <CheckBox
                android:id="@+id/q2a2"
                style="@style/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2a2right" />

            <CheckBox
                android:id="@+id/q2a3"
                style="@style/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2a3wrong" />

            <CheckBox
                android:id="@+id/q2a4"
                style="@style/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2a4right" />

        </LinearLayout>

        <!--Question 3-->

        <LinearLayout
            android:id="@+id/second_question"
            style="@style/questions"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_3" />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:padding="@dimen/margin_small"
                android:src="@drawable/poker_hand"
                android:contentDescription="@string/img_AA88"/>

            <EditText
                android:id="@+id/question_three_input"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/answer_hint" />

        </LinearLayout>

        <!--Question 4-->

        <LinearLayout
            style="@style/questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_4" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/q4a1"
                    style="@style/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4a1right" />

                <RadioButton
                    android:id="@+id/q4a2"
                    style="@style/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4a2wrong" />

                <RadioButton
                    android:id="@+id/q4a3"
                    style="@style/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4a3wrong" />

                <RadioButton
                    android:id="@+id/q4a4"
                    style="@style/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4a4wrong" />
            </RadioGroup>

        </LinearLayout>

        <!--Question 5-->

        <LinearLayout
            style="@style/questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_5" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/q5a1"
                    style="@style/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q5a1wrong" />

                <RadioButton
                    android:id="@+id/q5a2"
                    style="@style/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q5a2wrong" />

                <RadioButton
                    android:id="@+id/q5a3"
                    style="@style/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q5a3right" />

                <RadioButton
                    android:id="@+id/q5a4"
                    style="@style/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q5a4wrong" />
            </RadioGroup>

        </LinearLayout>

        <!--Question 6-->

        <LinearLayout
            android:id="@+id/sixth_question"
            style="@style/questions"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_6" />

            <EditText
                android:id="@+id/question_six_input"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/answer_hint" />

        </LinearLayout>

        <!--Question 7-->

        <LinearLayout
            style="@style/questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_7" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/q7a1"
                    style="@style/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q7a1wrong" />

                <RadioButton
                    android:id="@+id/q7a2"
                    style="@style/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q7a2wrong" />

                <RadioButton
                    android:id="@+id/q7a3"
                    style="@style/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q7a3wrong" />

                <RadioButton
                    android:id="@+id/q7a4"
                    style="@style/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q7a4right" />
            </RadioGroup>

        </LinearLayout>

        <!--Question 8-->

        <LinearLayout
            style="@style/questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_8" />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:padding="@dimen/margin_small"
                android:src="@drawable/rainbow_flop"
                android:contentDescription="@string/img_rainbow_flop"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/q8a1"
                    style="@style/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q8a1wrong" />

                <RadioButton
                    android:id="@+id/q8a2"
                    style="@style/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q8a2right" />

                <RadioButton
                    android:id="@+id/q8a3"
                    style="@style/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q8a3wrong" />

            </RadioGroup>

        </LinearLayout>

        <!--Question 9-->

        <LinearLayout
            style="@style/questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_9" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/q9a1"
                    style="@style/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:text="@string/q9a1wrong" />

                <RadioButton
                    android:id="@+id/q9a2"
                    style="@style/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:text="@string/q9a2right" />

                <RadioButton
                    android:id="@+id/q9a3"
                    style="@style/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:text="@string/q9a3wrong" />

            </RadioGroup>

        </LinearLayout>

        <!--Submit button-->

        <Button
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text"
            android:onClick="submitAnswers"/>

    </LinearLayout>

</ScrollView>
